<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <Switch
        android:id="@+id/weatherUseGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_use_gps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/weatherCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/weather_city_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherUseGps" />

    <Button
        android:id="@+id/weatherQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_query_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherCityName" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/weatherTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherQuery">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/weatherTabToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_forecast_today" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/weatherTabTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_forecast_tomorrow" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/weatherTabIn2Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_forecast_after_tomorrow" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherForecastLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherTabLayout">

        <TextView
            android:id="@+id/weatherConditionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/weather_condition_default"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/weatherConditionIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherConditionTextView"
            app:srcCompat="@android:drawable/ic_menu_help" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/weather_temperature_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherConditionIcon" />

        <LinearLayout
            android:id="@+id/weatherTemperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <LinearLayout
                android:id="@+id/weatherMinTemperatureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_min_temperature_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <TextView
                    android:id="@+id/weatherMinTemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_temperature_default"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weatherAvgTemperatureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_avg_temperature_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <TextView
                    android:id="@+id/weatherAvgTemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_temperature_default"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weatherMaxTemperatureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_max_temperature_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

                <TextView
                    android:id="@+id/weatherMaxTemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_temperature_default"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>